src/objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>Car</fullName>
        <description>Lead Process for Car</description>
        <isActive>true</isActive>
        <values>
            <fullName>Application Taken</fullName>
        </values>
        <values>
            <fullName>Called - Call Back</fullName>
        </values>
        <values>
            <fullName>Called - No Answer 1</fullName>
        </values>
        <values>
            <fullName>Called - No Answer 2</fullName>
        </values>
        <values>
            <fullName>Called - No Answer 3</fullName>
        </values>
        <values>
            <fullName>Called - No Answer 4</fullName>
        </values>
        <values>
            <fullName>Called - No Answer 5</fullName>
        </values>
        <values>
            <fullName>Closed Lost - Competitive Pricing</fullName>
        </values>
        <values>
            <fullName>Closed Lost - Declined</fullName>
        </values>
        <values>
            <fullName>Closed Lost - Disconnected</fullName>
        </values>
        <values>
            <fullName>Closed Lost - Fax</fullName>
        </values>
        <values>
            <fullName>Closed Lost - Financed Already</fullName>
        </values>
        <values>
            <fullName>Closed Lost - Language Issues</fullName>
        </values>
        <values>
            <fullName>Closed Lost - No Finance Required</fullName>
        </values>
        <values>
            <fullName>Closed Lost - Wrong Number</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Home</fullName>
        <description>Lead Process for Home</description>
        <isActive>true</isActive>
        <values>
            <fullName>Appointed</fullName>
        </values>
        <values>
            <fullName>Called - Call Back</fullName>
        </values>
        <values>
            <fullName>Called - No Answer 1</fullName>
        </values>
        <values>
            <fullName>Called - No Answer 2</fullName>
        </values>
        <values>
            <fullName>Called - No Answer 3</fullName>
        </values>
        <values>
            <fullName>Called - No Answer 4</fullName>
        </values>
        <values>
            <fullName>Called - No Answer 5</fullName>
        </values>
        <values>
            <fullName>Closed Lost - Bad Data</fullName>
        </values>
        <values>
            <fullName>Closed Lost - Declined</fullName>
        </values>
        <values>
            <fullName>Closed Lost - Disconnected</fullName>
        </values>
        <values>
            <fullName>Closed Lost - Fax</fullName>
        </values>
        <values>
            <fullName>Closed Lost - Financed Already</fullName>
        </values>
        <values>
            <fullName>Closed Lost - Has Mortgage</fullName>
        </values>
        <values>
            <fullName>Closed Lost - Language Issues</fullName>
        </values>
        <values>
            <fullName>Closed Lost - No Finance Required</fullName>
        </values>
        <values>
            <fullName>Closed Lost - Not Interested</fullName>
        </values>
        <values>
            <fullName>Closed Lost - Out of Area</fullName>
        </values>
        <values>
            <fullName>Closed Lost - Over 65</fullName>
        </values>
        <values>
            <fullName>Closed Lost - Owns Outright</fullName>
        </values>
        <values>
            <fullName>Closed Lost - Renting</fullName>
        </values>
        <values>
            <fullName>Closed Lost - Wrong Number</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Home Dialler</fullName>
        <description>Lead Process for Home - Dialler</description>
        <isActive>true</isActive>
        <values>
            <fullName>Appointed</fullName>
        </values>
        <values>
            <fullName>Attempting Contact</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Lost - Bad Data</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Lead Process for Click Loans</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Appointed</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>RIsk</fullName>
        <description>Lead Process for Risk</description>
        <isActive>true</isActive>
        <values>
            <fullName>Called - Call Back</fullName>
        </values>
        <values>
            <fullName>Called - No Answer 1</fullName>
        </values>
        <values>
            <fullName>Called - No Answer 2</fullName>
        </values>
        <values>
            <fullName>Called - No Answer 3</fullName>
        </values>
        <values>
            <fullName>Called - No Answer 4</fullName>
        </values>
        <values>
            <fullName>Called - No Answer 5</fullName>
        </values>
        <values>
            <fullName>Closed Lost - Competitive Pricing</fullName>
        </values>
        <values>
            <fullName>Closed Lost - Declined</fullName>
        </values>
        <values>
            <fullName>Closed Lost - Disconnected</fullName>
        </values>
        <values>
            <fullName>Closed Lost - Fax</fullName>
        </values>
        <values>
            <fullName>Closed Lost - Financed Already</fullName>
        </values>
        <values>
            <fullName>Closed Lost - Has Mortgage</fullName>
        </values>
        <values>
            <fullName>Closed Lost - Language Issues</fullName>
        </values>
        <values>
            <fullName>Closed Lost - No Finance Required</fullName>
        </values>
        <values>
            <fullName>Closed Lost - Out of Area</fullName>
        </values>
        <values>
            <fullName>Closed Lost - Over 65</fullName>
        </values>
        <values>
            <fullName>Closed Lost - Owns Outright</fullName>
        </values>
        <values>
            <fullName>Closed Lost - Renting</fullName>
        </values>
        <values>
            <fullName>Closed Lost - Wrong Number</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Policy Inforce</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Account_Click_Loan_Stage__c</fullName>
        <formula>TEXT(acf_partner_account__r.Click_Loan_Stage__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account - Loan Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Acf_Are_there_any_more_properties__c</fullName>
        <description>Click Loans</description>
        <label>Are there any more properties?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AddToCallFileDateCheck__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Add To Call File Date Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AddToCallFileDate__c</fullName>
        <label>Add To Call File Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Affiliate_campaign__c</fullName>
        <description>Internal Tracking code of affiliate campaign</description>
        <label>Affiliate_campaign</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Age_of_Current_Loan__c</fullName>
        <label>Age of Current Loan</label>
        <picklist>
            <picklistValues>
                <fullName>6 Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12 Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18 Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 Year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 Years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 Years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 Years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 Years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6+ Years</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_Income__c</fullName>
        <description>AFTER TAX Annual Income of person applying for loan</description>
        <inlineHelpText>AFTER TAX Annual Income of person applying for loan</inlineHelpText>
        <label>Annual Income</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Application_Type__c</fullName>
        <label>Application Type</label>
        <picklist>
            <picklistValues>
                <fullName>Single</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Joint</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Autoresponder_Email_SMS__c</fullName>
        <description>Field triggers email and sms to new leads</description>
        <label>Autoresponder Email SMS</label>
        <picklist>
            <picklistValues>
                <fullName>True</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>False</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Bank_Customer_Service_Rating__c</fullName>
        <label>Bank - Customer Service Rating</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bank_Offered_Lower_Rate__c</fullName>
        <label>Bank - Offered Lower Rate</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Sentiment__c</fullName>
        <label>Bank Sentiment</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Birthday__c</fullName>
        <inlineHelpText>Just type the date in the box using this format 
DD/MM/YYYY
17/12/1969</inlineHelpText>
        <label>Birthday</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Broker_Profile_Name__c</fullName>
        <label>Brokers Name - Lead Submitted</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calls_Last_Disposition_Date__c</fullName>
        <label>Calls - Last Disposition Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Calls_Last_Disposition_Detail__c</fullName>
        <label>Calls - Last Disposition Detail</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calls_Last_Disposition__c</fullName>
        <description>Auto field updated from calls to show last disposition of lead record</description>
        <label>Calls - Last Disposition</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Click_Is_Phone_Broker_customer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Phone Broker customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Click_Lead_Number__c</fullName>
        <label>Lead Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Click_Loan_Type__c</fullName>
        <label>Loan Type</label>
        <picklist>
            <picklistValues>
                <fullName>New Purchase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refinance</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Click_Round_Robin_Id__c</fullName>
        <formula>IF( (acfHow_is_your_current_credit_history__c != &apos;Excellent - No Issues&apos;  || acfCurrentRate__c &gt;= 6 || TEXT(acfEmployment_Type__c) == &quot;Self Employed&quot;), MOD(Click_Lead_Number__c,VALUE($Label.Click_Number_Of_Bad_Credit_Team)) + 101, MOD(Click_Lead_Number__c,VALUE($Label.Click_Number_Of_Core_Team_Users)) +1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Round Robin Id</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Community__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ACF Community Setup</label>
        <referenceTo>Click_Community_Setup__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_Email_Body_Text__c</fullName>
        <label>Contact Email Body Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact_Subject_Line__c</fullName>
        <label>Contact_Subject_Line</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Credit_Guide_Quote_Privacy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Credit Guide, Quote &amp; Privacy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Credit_History__c</fullName>
        <label>Credit History</label>
        <picklist>
            <picklistValues>
                <fullName>Paid or Unpaid Defaults</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discharged from Part 9 or Bankruptcy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Too Many Credit Enquiries</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Credit History</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Excellent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Excellent - No Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Average - Paid telco/utility default</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fair - Multiple Defaults</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor - Prior Bankruptcy or Part 9</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Current_Bank__c</fullName>
        <label>Current Bank</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Financials_Up_to_Date__c</fullName>
        <label>Current Financials Up to Date</label>
        <picklist>
            <picklistValues>
                <fullName>PAYG - Payslips</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes - Complete to 2013/2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Some - Up to 2012/2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Current_Interest_Rate_Type__c</fullName>
        <label>Current Interest Rate Type</label>
        <picklist>
            <picklistValues>
                <fullName>Variable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Variable / Fixed Split</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Line of Credit</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Current_Interest_Rate__c</fullName>
        <label>Current Interest Rate</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Current_Lender__c</fullName>
        <label>Current Lender</label>
        <picklist>
            <picklistValues>
                <fullName>Current Lender - TBA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adelaide Bank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adelaide Bank Commercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advantedge Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anchorage Home Loans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANZ Commercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia First Mortgage Commercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australian First Mortgage Pty Ltd</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australian Defence Credit Union</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australian Unity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bank of Melbourne</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bank of Queensland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bank SA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bank SA Commercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bank of Victoria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banksia Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BankWest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BankWest Commercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bendigo Bank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beyond Bank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bluebay Home Loans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bluestone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BMC Mortgage Corporation Pty Ltd</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Circle Credit Union</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Citibank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coastline Credit Union</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Collins Home Loans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commonwealth Bank</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Current_Lender_empty__c</fullName>
        <formula>ISBLANK(TEXT(Current_Lender__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Lender empty?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Current_Loan_Type__c</fullName>
        <label>Current Loan Type</label>
        <picklist>
            <picklistValues>
                <fullName>Owner Occupied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Investment Property</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Construction</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Current_Loan_Value__c</fullName>
        <label>Current Loan Value</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Property_Value__c</fullName>
        <label>Current Property Value</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DNCR_Outcome__c</fullName>
        <description>Outcome of DNCR Wash. Y = on the DNCR and should not be called. N = not on the DNCR and can be called.</description>
        <label>DNCR Outcome</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNCR_Wash_Date__c</fullName>
        <description>DNCR Wash Date</description>
        <label>DNCR Wash Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DNCR_Wash_Expiry__c</fullName>
        <formula>DNCR_Wash_Date__c  + 30</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DNCR Wash Expiry</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DNCR_Washing_Transaction_ID__c</fullName>
        <description>DNCR Washing Transaction ID</description>
        <label>DNCR Washing Transaction ID</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Days_since_Last_Disposition_Date__c</fullName>
        <description>Calculates how many days have passed since this Lead was called by the Dialler</description>
        <formula>NOW() -  Calls_Last_Disposition_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculates how many days have passed since this Lead was called by the Dialler</inlineHelpText>
        <label>Days since Last Disposition Date</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_since_Last_Refi__c</fullName>
        <formula>TODAY () -  Last_Refinance__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days since Last Refi</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_until_Fixed_Rate_Expires__c</fullName>
        <formula>Fixed_Rate_Expiry__c  - TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days until Fixed Rate Expires</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Details_Updated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field updates when user resubmits information via thank you page</description>
        <label>Details Updated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Discharged_from_Part_9_or_Bankruptcy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Discharged from Part 9 or Bankruptcy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_Trigger_Action__c</fullName>
        <label>Email Trigger Action</label>
        <picklist>
            <picklistValues>
                <fullName>Email Opened</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Clicked</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Employer_Name__c</fullName>
        <inlineHelpText>Enter Current Employer Name(s)</inlineHelpText>
        <label>Employer Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employment_Start_Date__c</fullName>
        <description>Employment Start Date</description>
        <inlineHelpText>Just type the date in the box using this format 
DD/MM/YYYY
17/12/1969</inlineHelpText>
        <label>Employment Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Employment_Status__c</fullName>
        <inlineHelpText>You can select more than one value for the Employment Status</inlineHelpText>
        <label>Employment Status</label>
        <picklist>
            <picklistValues>
                <fullName>Casual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Centrelink or Pension</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Full Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Part Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self Employed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unemployed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Est_Location__c</fullName>
        <formula>bizible__City__c  &amp; &quot;,&quot; &amp;  bizible__Region__c  &amp; &quot;,&quot; &amp;   bizible__Country__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Est Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fixed_Rate_Expiry__c</fullName>
        <inlineHelpText>If the date not available in popup window (+5 Years)
Just type the date in the box using this format 
DD/MM/YYYY
17/12/1969</inlineHelpText>
        <label>Fixed Rate Expiry</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Has_Home_Loan__c</fullName>
        <label>Has Home Loan</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Housing_Status__c</fullName>
        <label>Housing Status</label>
        <picklist>
            <picklistValues>
                <fullName>Boarding/Family</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mortgage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Own Outright</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Looking to Buy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saving Deposit</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>In_Line_Status_Update__c</fullName>
        <label>In-Line Status Update</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Called - No Answer 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Called - No Answer 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Called - No Answer 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Called - No Answer 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Called - No Answer 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Called - Call Back</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed Lost - Disconnected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed Lost - Fax</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed Lost - Language Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed Lost - Has Mortgage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed Lost - Renting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed Lost - Owns Outright</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed Lost - Over 65</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed Lost - Wrong Number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed Lost - Out of Area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed Lost - Competitive Pricing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed Lost - Financed Already</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed Lost - No Finance Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed Lost - Not Interested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed Lost - Declined</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Appointed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application Taken</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Policy Inforce</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Internal_Referrer_Name__c</fullName>
        <label>Internal Referrer Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsPartner_Broker_Customer__c</fullName>
        <formula>IF(Is_Partner_Broker_Customer__c == TRUE, &quot;Yes&quot;, &quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Partner Broker Customer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Lendi__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Lendi</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Partner_Broker_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Partner Broker Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Phone_Broker_Customer__c</fullName>
        <formula>IF(Click_Is_Phone_Broker_customer__c == TRUE, &quot;True&quot;, &quot;False&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Phone Broker Customer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Update_Activity__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for achieving the visitor activities info from pardot</description>
        <label>Is Update Activity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Updated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>if the lead is being updated</description>
        <label>Is Updated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_a_Call_File_Member__c</fullName>
        <label>Is a Call File Member</label>
        <picklist>
            <picklistValues>
                <fullName>False</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>True</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Job_Title__c</fullName>
        <label>Job Title</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LVR_Range__c</fullName>
        <formula>IF( LVR__c &gt; 0.80,&quot;High LVR&quot;,&quot;Low LVR&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LVR Range</label>
        <type>Text</type>
    </fields>
</CustomObject>